# tensorizer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README-subprocess-serialization.md  README.md  benchmark.py  local_file_benchmark.py  mkdocs.yaml  mkdocs.yml  package-lock.json  package.json  protobuf.py  pyproject.toml  requirements.txt  serializer.py  setup.py  tensorizer.py  test2.py  test_protobuf.py  test_serializer.py  test_tensorizer.py
.github/workflows/: benchmark.yml  build.yml  test.yml
ATTIC/: README.md  test_tensorizer.py
docs/: encryption.md  index.md  subprocess-serialization.md
docs/architecture/: index.md
docs/how-to/: index-advanced-topics.md  index.md
docs/reference/: index.md  placeholder.md
docs/scripts/: mkdocs_gen_ref.py
docs/source/: conf.py  index.rst  stream_io.rst  tensorizer.rst  utils.rst
examples/: deserialize-simple.py  deserialize.py  encrypt_existing.py  encryption.py  hf_serialization.py  requirements.txt  serialize.py  tensorizer.py
examples/benchmark/: Dockerfile  GraphResults.ipynb  README.md  benchmark-job.yaml  benchmark-pvc.yaml  deserialize_benchmark.py  jupyter-lab-service.yaml  (+2 more)
gooseai/: go.mod
proto/: requirements.txt  tensors.proto
shared-fs-benchmark/: parse-logs.py  shared-fs-benchmark-pvc.yaml  shared-fs-benchmark.dockerfile  shared-fs-benchmark.py  shared-fs-benchmark.yaml
tensorizer/: _NumpyTensor.py  __init__.py  _crypt_info.py  _cuda_file.pyx  _futuregroup.py  _internal_utils.py  _linear_partition.py  _name_threads.py  _quick_alloc.py  _syscalls.py  _tensor_path.py  _version.py  _wide_pipes.py  name_threads.py  protobuf.py  serialization.py  stream_io.py  tensorizer.py  tensors.proto  tensors_pb2.py  torch_compat.py  utils.py
tensors/: go.mod  tensors.pb.go  tensors_pb.js  tensors_pb2.py
tests/: requirements.txt  test_serialization.py  test_stream_io.py  test_syscalls.py  test_torch_compat.py
(+17 files in other folders)
