[project]
name = "tensorizer"
dynamic = ["version"]
license = { text = "MIT License" }
keywords = ["tensorizer", "machine learning", "serialization", "tensor", "pytorch"]
authors = [
  { name="CoreWeave" }
]
description = "A tool for fast PyTorch module, model, and tensor serialization + deserialization."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.5",
    "protobuf>=3.19.5",
    "psutil>=5.9.4",
    "boto3>=1.26.0",
    "redis>=4.5.5",
    "hiredis>=2.2.0",
    "libnacl>=2.1.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Topic :: Internet",
    "Intended Audience :: Developers"
]

[project.urls]
"Homepage" = "https://github.com/coreweave/tensorizer"
"Repository" = "https://github.com/coreweave/tensorizer"
"Changelog" = "https://github.com/coreweave/tensorizer/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tensorizer", "tensorizer._crypt"]

[tool.setuptools.package-data]
tensorizer = ["tensors.proto"]

[tool.setuptools.dynamic.version]
attr = "tensorizer._version.__version__"

[tool.black]
line-length = 80
target-version = ["py38", "py39", "py310", "py311", "py312"]
preview = true
force-exclude = '''
(
  ^/ATTIC
  | ^/tensors
  | .*_pb2.py
)
'''

[tool.isort]
profile = "black"
line_length = 80
src_paths = ["tensorizer/", "tests/", "examples/"]
extend_skip_glob = [
    "ATTIC/*",
    "*_pb2.py",
    "tensors/*",
    "examples/serialize.py",
    "examples/deserialize.py"
]
use_parentheses = true
